# termux-auth

./: .gitignore  .replit  .token  README.md  app.py  index.html  main.py  models.py  push.py  pyproject.toml  replit.md  server.py
.github/workflows/: publish-pypi.yml
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--MENGIRIM-OTP-VIA-WHATSAPP--1765034293849_1765034293851.txt  Pasted-git-pull-rm-f-termux-auth-lib-cpython-312-so-cd-termux-_1765024091318.txt  Pasted-import-requests-import-json-url-https-gql-tokopedia-com_1765009014392.txt  Pasted-nah-sekarang-saya-mau-jika-user-sdh-login-add-fitur-men_1764991967245.txt  Pasted-tolong-hapus-semua-layanan-buat-baru-Type-Whatsapp-fake_1765004210268.txt  Pasted-tolong-hapus-semua-layanan-buat-baru-Type-Whatsapp-fake_1765004310321.txt  Pasted-tolong-memuat-system-yang-ke-2-hapus-saja-dan-tolong-pe_1765025454660.txt
encrypt/: README.txt  build_so.sh  config.enc  config.json  encrypt_config.py  setup.py  setup_termux.sh  termux_auth_core.c  termux_auth_core.pyx
run/: README.txt  config.enc  run.py
xyra_auth_package/: LICENSE  MANIFEST.in  README.md  pyproject.toml
xyra_auth_package/src/xyra_auth/: __init__.py  __main__.py  config.enc  config.json  core.py  termux_auth_lib.py
xyra_auth_package/src/xyra_auth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
xyra_auth_package/src/xyra_whatsapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
