[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "cython>=3.2.2",
    "flask>=3.1.2",
    "requests>=2.32.5",
    "simple-term-menu>=1.6.6",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
