[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "build>=1.3.0",
    "cryptography>=46.0.3",
    "cython>=3.2.2",
    "email-validator>=2.3.0",
    "fake-useragent>=2.2.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "routes>=2.5.1",
    "simple-term-menu>=1.6.6",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "twine>=6.2.0",
]
