[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyra-whatsapp"
version = "1.1.4"
description = "Xyra WhatsApp - WhatsApp Automation System"
authors = [{name = "XyraOfficial", email = "xyraofficialsup@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
keywords = ["whatsapp", "automation", "messaging", "xyra", "termux"]
dependencies = [
    "requests>=2.28.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "simple-term-menu>=1.6.0",
    "fake-useragent>=1.1.0",
    "tqdm>=4.64.0",
]

[project.urls]
Homepage = "https://github.com/xyraofficial/xyra-whatsapp"
Repository = "https://github.com/xyraofficial/xyra-whatsapp"
Issues = "https://github.com/xyraofficial/xyra-whatsapp/issues"

[project.scripts]
xyra-whatsapp = "xyra_auth:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xyra_auth = ["sounds/*.wav", "sounds/*.mp3", "*.enc", "*.json"]
